--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/node": "20.4.2",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
-    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/coverage-v8": "0.33.0",
     "del-cli": "5.0.0",
     "eslint": "8.45.0",
     "husky": "8.0.3",
