--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "author": "Tramaine L. Gillus",
   "dependencies": {
-    "jose": "5.6.3"
+    "auth0": "4.7.0",
+    "aws-jwt-verify": "4.0.1",
+    "dotenv": "16.4.5",
+    "envalid": "8.0.0",
+    "jose": "5.6.3",
+    "oauth4webapi": "2.11.1",
+    "openid-client": "5.6.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
