--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "author": "Tramaine L. Gillus",
+  "bin": {
+    "node-crypto-playground": "bin/node-crypto-playground.js"
+  },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "3.621.0",
     "auth0": "4.7.0",
+    "aws-cdk-lib": "2.150.0",
     "aws-jwt-verify": "4.0.1",
+    "constructs": "10.3.0",
     "dotenv": "16.4.5",
+    "effect": "3.6.0",
     "envalid": "8.0.0",
     "jose": "5.6.3",
     "oauth4webapi": "2.11.1",
-    "openid-client": "5.6.5"
+    "openid-client": "5.6.5",
+    "source-map-support": "0.5.21"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@types/node": "20.14.13",
-    "@vitest/coverage-v8": "2.0.4",
+    "@vitest/coverage-v8": "2.0.5",
+    "aws-cdk": "2.150.0",
     "del-cli": "5.1.0",
     "husky": "9.1.4",
     "lint-staged": "15.2.7",
-    "tsx": "4.16.2",
+    "tsx": "4.16.3",
     "typescript": "5.5.4",
-    "vitest": "2.0.4"
+    "vitest": "2.0.5"
   },
-  "license": "ISC",
   "name": "node-crypto-playground",
   "scripts": {
-    "build": "npm run clean && npm test && tsc",
-    "clean": "del-cli lib",
+    "build": "tsc",
+    "cdk": "cdk",
     "format": "biome format --write --no-errors-on-unmatched .",
     "lint": "biome lint --no-errors-on-unmatched .",
     "lint:fix": "biome lint --apply --no-errors-on-unmatched .",
     "prepare": "husky",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "watch": "tsc -w"
   },
   "type": "module",
   "version": "0.0.0"
