--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
+  "biome.lsp.bin": "./node_modules/.bin/biome",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": "always"
+    "quickfix.biome": "explicit",
+    "source.fixAll.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
   },
   "editor.defaultFormatter": "biomejs.biome",
+  "editor.detectIndentation": false,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "prettier.enable": true,
+  "editor.insertSpaces": true,
+  "editor.tabSize": 2,
+  "prettier.enable": false,
   "typescript.tsdk": "./node_modules/typescript/lib"
 }
