--- a/package.json
+++ b/package.json
@@ -3,40 +3,40 @@
     "node-crypto-playground": "bin/node-crypto-playground.js"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "3.782.0",
-    "auth0": "4.21.0",
-    "aws-cdk-lib": "2.188.0",
-    "aws-jwt-verify": "5.0.0",
+    "@aws-sdk/client-cognito-identity-provider": "3.840.0",
+    "auth0": "4.27.0",
+    "aws-cdk-lib": "2.204.0",
+    "aws-jwt-verify": "5.1.0",
     "constructs": "10.4.2",
-    "dotenv": "16.4.7",
-    "effect": "3.14.6",
+    "dotenv": "17.0.1",
+    "effect": "3.16.12",
     "envalid": "8.0.0",
-    "jose": "6.0.10",
-    "oauth4webapi": "3.4.0",
-    "openid-client": "6.4.1",
+    "jose": "6.0.11",
+    "oauth4webapi": "3.5.5",
+    "openid-client": "6.6.2",
     "source-map-support": "0.5.21"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "19.8.0",
-    "@commitlint/config-conventional": "19.8.0",
-    "@types/node": "22.14.0",
-    "@vitest/coverage-v8": "3.1.1",
-    "aws-cdk": "2.1007.0",
+    "@biomejs/biome": "2.0.6",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@types/node": "22.16.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "aws-cdk": "2.1020.2",
     "del-cli": "6.0.0",
     "husky": "9.1.7",
-    "lint-staged": "15.5.0",
-    "tsx": "4.19.3",
+    "lint-staged": "16.1.2",
+    "tsx": "4.20.3",
     "typescript": "5.8.3",
-    "vitest": "3.1.1"
+    "vitest": "3.2.4"
   },
   "name": "node-crypto-playground",
   "scripts": {
     "build": "tsc",
     "cdk": "cdk",
-    "format": "biome format --write --no-errors-on-unmatched .",
+    "format": "biome format --fix --no-errors-on-unmatched .",
     "lint": "biome lint --no-errors-on-unmatched .",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched .",
+    "lint:fix": "biome lint --fix --no-errors-on-unmatched .",
     "prepare": "husky",
     "test": "vitest run",
     "test:watch": "vitest",
